--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,291 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header-top">
+        <div class="header-top__inner">
+          <a class="logo" href="#">
+            <img class="logo-img" src="images/logo.png" alt="logo img">
+          </a>
+          <div class="header-top__contacts">
+            <a href="tel:88002000500" class="header-top__phone">8 800 2000 500
+            </a>
+            <a class="header-top__adress" href="#">
+              ул. Пушкина 15
+            </a>
+            <button class="header-top__btn">
+              Заказать звонок
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="header-content">
+        <div class="header-content__inner">
+          <h1 class="header-content__title">
+            Спишем долг от 300 000 ₽ <br> через процедуру банкротства
+          </h1>
+          <div class="header-content__properties">
+            <div class="header-content__properties-item">
+              > 500
+              <span>человек освободили от долгов</span>
+            </div>
+            <div class="header-content__properties-item">
+              > 15
+              <span>юристов-экспертов в области банкротства</span>
+            </div>
+            <div class="header-content__properties-item">
+              4
+              <span>финансовых управляющих в Екатеринбурге</span>
+            </div>
+          </div>
+          <p class="header-content__text">Доверьтесь своим</p>
+          <button class="header-content__btn">
+            Получить бесплатную консультацию
+          </button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="process">
+      <div class="container">
+        <h2 class="title process__title">Как избавиться от долгов через банкротство?</h2>
+          <div class="process__inner">
+            <div class="process__item">
+              <img class="process__item-img" src="images/icons/1.svg" alt="process img">
+              <p class="process__item-text">
+                Запишитесь на бесплатную консультацию и убедитесь, что подходите под списание долга
+              </p>
+            </div>
+            <div class="process__item">
+              <img class="process__item-img" src="images/icons/2.svg" alt="process img">
+              <p class="process__item-text">
+                Подписываем договор и совместно с вами собираем пакет документов
+              </p>
+            </div>
+            <div class="process__item">
+              <img class="process__item-img" src="images/icons/3.svg" alt="process img">
+              <p class="process__item-text">
+                Проходим процедуру банкротства с дружественным финансовым <br> управляющим
+              </p>
+            </div>
+            <div class="process__item">
+              <img class="process__item-img" src="images/icons/4.svg" alt="process img">
+              <p class="process__item-text">
+                Наш юрист успешно представляет ваши интересы в суде
+              </p>
+            </div>
+            <div class="process__item">
+              <img class="process__item-img" src="images/icons/5.svg" alt="process img">
+              <p class="process__item-text">
+                Получаем определение арбитражного суда о списании долга
+              </p>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <section class="stages">
+      <div class="container">
+        <h2 class="title stages__title">Этапы работы</h2>
+        <ol class="stages__inner">
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Оставьте заявку и наш <br> юрист свяжется с вами в ближайшее время.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Мы анализируем вашу ситуацию, оцениваем возможные риски и даём несколько вариантов решения.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Встречаемся в нашем офисе и проводим для вас бесплатную очную консультацию.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Заключаем договор на оказание услуг и оформляем доверенность.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Проводим правовую экспертизу, даём заключение о списании ваших долгов с гарантией результата.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Совместно с вами <br> занимаемся сбором документов. <br> Подготавливаем и подаём заявление <br> в арбитражный суд.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Мы назначаем финансового управляющего, который заинтересован довести вашу процедуру банкротства до списания долга.
+            </p>
+          </li>
+          <li class="stages__list">
+            <p class="stages__list-text">
+              Получаем определение <br> суда о полном <br> списании долга.
+            </p>
+          </li>
+        </ol>
+      </div>
+    </section>
+    
+    <section class="answers">
+      <div class="container">
+        <h2 class="title answers__title">Ответы на частые вопросы</h2>
+        <div class="answers__inner">
+          <div class="answers-questions">
+            <div class="answers-questions__item">
+              <h5 class="answers-questions__item-title ">
+                Что такое банкротство?
+              </h5>
+              <p class="answers-questions__item-text">
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                банкротства.
+              </p>
+            </div>
+            <div class="answers-questions__item">
+              <h5 class="answers-questions__item-title">
+                Как узнать подхожу ли я?
+              </h5>
+              <p class="answers-questions__item-text">
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                банкротства.
+              </p>
+            </div>
+            <div class="answers-questions__item">
+              <h5 class="answers-questions__item-title">
+                Какие долги списываются?
+              </h5>
+              <p class="answers-questions__item-text">
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                банкротства.
+              </p>
+            </div>
+            <div class="answers-questions__item">
+              <h5 class="answers-questions__item-title">
+                Сколько это длится?
+              </h5>
+              <p class="answers-questions__item-text">
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                банкротства.
+              </p>
+            </div>
+            <div class="answers-questions__item">
+              <h5 class="answers-questions__item-title">
+                Какие последствия процедуры?
+              </h5>
+              <p class="answers-questions__item-text">
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                банкротства.
+              </p>
+            </div>
+
+          </div>
+
+          <div class="answers-consult">
+            <h5 class="answers-consult__title">
+              ОСТАЛИСЬ ВОПРОСЫ?
+            </h5>
+            <p class="answers-consult__text">
+              Запишитесь на бесплатную консультацию к нашим юристам
+            </p>
+            <form class="answers-consult__form" action="#">
+              <input class="answers-consult__input" type="text" placeholder="Имя" required>
+              <input class="answers-consult__input" type="text" placeholder="Номер телефона" required>
+              <button class="answers-consult__btn" type="submit">Записаться</button>
+              <label class="answers-consult__label">
+                
+                <div class="answers-consult__box">
+                  <input type="checkbox" class="answers-consult__inp">
+                  <span class="answers-consult__checkbox"></span>
+                </div>
+                <span class="answers-consult__checkbox-text">Даю согласие на обработку персональных данных</span>
+              </label>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="pluses">
+      <div class="container">
+        <div class="pluses__inner">
+          <div class="pluses-content">
+            <h2 class="title pluses__title">
+              Немного хвастовства <br> или почему стоит довериться нам?
+            </h2>
+            <ul class="pluses-content__inner">
+              <li class="pluses-content__list">
+                <p class="pluses-content__text">
+                  Мы местная компания и знаем специфику региона,а наша практика построена на делах о банкротстве именно в Свердловской
+                  области.
+                </p>
+              </li>
+              <li class="pluses-content__list">
+                <p class="pluses-content__text">
+                  Банкротство не должно и не может стоить огромных денег.
+                  Мы не загибаем московские цены, а подбираем условия индивидуально под каждого клиента.
+                </p>
+              </li>
+              <li class="pluses-content__list">
+                <p class="pluses-content__text">
+                  Сотрудничаем с финансовыми управляющими, имеющими обширную практику в арбитражном суде Свердловской области.
+                </p>
+              </li>
+              <li class="pluses-content__list">
+                <p class="pluses-content__text">
+                  Процедура банкротства физ.лиц для нас — отлаженный механизм. Большинство наших юристов списывают долги граждан через
+                  127ФЗ с 2015 года.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <img class="pluses__img" src="images/pluses.png" alt="pluses img">
+        </div>
+      </div>
+    </section>
+    <section class="test">
+      <div class="container">
+        <h2 class="title test__title">
+          Пройдите простой тест и узнайте, подходите ли под <br> процедуру банкротства именно вы.
+        </h2>
+        <a class="test__link" href="#">
+          <img class="test__img" src="images/icons/arrow-test.svg" alt="test img">
+        </a>
+      </div>
+    </section>
+  </main>
   
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <a class="logo" href="#">
+          <img class="logo-img" src="images/logo.png" alt="logo img">
+        </a>
+        <div class="footer-info">
+          <div class="footer-info__item">
+            <h6 class="footer-info__item-title">Телефон</h6>
+            <a href="" class="footer-info__item-link" href="tel:+79189181212">+7 (918) 918-12-12</a>
+          </div>
+          <div class="footer-info__item">
+            <h6 class="footer-info__item-title">Электронная почта</h6>
+            <a class="footer-info__item-link" href="mailto:bankrot@gmail.com">bankrot@gmail.com</a>
+          </div>
+          <div class="footer-info__item">
+            <h6 class="footer-info__item-title">ИП Иванов</h6>
+            <a class="footer-info__item-link footer-info__item-link--underline" href="#">Политика конфиденциальности</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="js/main.min.js"></script>
 </body>
 </html>
