--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -23,6 +25,14 @@
             <button class="header-top__btn">
               Заказать звонок
             </button>
+            <div class="header-top__phone--hidden">
+              <a class="header-top__phone-icon" href="tel:88002000500">
+                <img src="images/icons/phone.svg" alt="">
+              </a>
+              <a class="header-top__phone-icon" href="tel:88002000500">
+                <img src="images/icons/whats.svg" alt="">
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -34,15 +44,15 @@
           <div class="header-content__properties">
             <div class="header-content__properties-item">
               > 500
-              <span>человек освободили от долгов</span>
+              <span> <span class="header-content__properties-span">человек</span> освободили от долгов</span>
             </div>
             <div class="header-content__properties-item">
               > 15
-              <span>юристов-экспертов в области банкротства</span>
+              <span> <span class="header-content__properties-span">юристов-экспертов</span> в области банкротства</span>
             </div>
             <div class="header-content__properties-item">
               4
-              <span>финансовых управляющих в Екатеринбурге</span>
+              <span> <span class="header-content__properties-span">финансовых управляющих</span> в Екатеринбурге</span>
             </div>
           </div>
           <p class="header-content__text">Доверьтесь своим</p>
@@ -59,38 +69,38 @@
     <section class="process">
       <div class="container">
         <h2 class="title process__title">Как избавиться от долгов через банкротство?</h2>
-          <div class="process__inner">
-            <div class="process__item">
-              <img class="process__item-img" src="images/icons/1.svg" alt="process img">
-              <p class="process__item-text">
-                Запишитесь на бесплатную консультацию и убедитесь, что подходите под списание долга
-              </p>
-            </div>
-            <div class="process__item">
-              <img class="process__item-img" src="images/icons/2.svg" alt="process img">
-              <p class="process__item-text">
-                Подписываем договор и совместно с вами собираем пакет документов
-              </p>
-            </div>
-            <div class="process__item">
-              <img class="process__item-img" src="images/icons/3.svg" alt="process img">
-              <p class="process__item-text">
-                Проходим процедуру банкротства с дружественным финансовым <br> управляющим
-              </p>
-            </div>
-            <div class="process__item">
-              <img class="process__item-img" src="images/icons/4.svg" alt="process img">
-              <p class="process__item-text">
-                Наш юрист успешно представляет ваши интересы в суде
-              </p>
-            </div>
-            <div class="process__item">
-              <img class="process__item-img" src="images/icons/5.svg" alt="process img">
-              <p class="process__item-text">
-                Получаем определение арбитражного суда о списании долга
-              </p>
-            </div>
+        <div class="process__inner">
+          <div class="process__item">
+            <img class="process__item-img" src="images/icons/1.svg" alt="process img">
+            <p class="process__item-text">
+              Запишитесь на бесплатную консультацию и убедитесь, что подходите под списание долга
+            </p>
           </div>
+          <div class="process__item">
+            <img class="process__item-img" src="images/icons/2.svg" alt="process img">
+            <p class="process__item-text">
+              Подписываем договор и совместно с вами собираем пакет документов
+            </p>
+          </div>
+          <div class="process__item">
+            <img class="process__item-img" src="images/icons/3.svg" alt="process img">
+            <p class="process__item-text">
+              Проходим процедуру банкротства с дружественным финансовым <br> управляющим
+            </p>
+          </div>
+          <div class="process__item">
+            <img class="process__item-img" src="images/icons/4.svg" alt="process img">
+            <p class="process__item-text">
+              Наш юрист успешно представляет ваши интересы в суде
+            </p>
+          </div>
+          <div class="process__item">
+            <img class="process__item-img" src="images/icons/5.svg" alt="process img">
+            <p class="process__item-text">
+              Получаем определение арбитражного суда о списании долга
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -102,36 +112,46 @@
             <p class="stages__list-text">
               Оставьте заявку и наш <br> юрист свяжется с вами в ближайшее время.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
           <li class="stages__list">
             <p class="stages__list-text">
               Мы анализируем вашу ситуацию, оцениваем возможные риски и даём несколько вариантов решения.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
+          <p class="stages__link">Смотреть все этапы работы</p>
           <li class="stages__list">
             <p class="stages__list-text">
               Встречаемся в нашем офисе и проводим для вас бесплатную очную консультацию.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
           <li class="stages__list">
             <p class="stages__list-text">
               Заключаем договор на оказание услуг и оформляем доверенность.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
           <li class="stages__list">
             <p class="stages__list-text">
               Проводим правовую экспертизу, даём заключение о списании ваших долгов с гарантией результата.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
           <li class="stages__list">
             <p class="stages__list-text">
-              Совместно с вами <br> занимаемся сбором документов. <br> Подготавливаем и подаём заявление <br> в арбитражный суд.
+              Совместно с вами <br> занимаемся сбором документов. <br> Подготавливаем и подаём заявление <br>
+              в арбитражный суд.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
           <li class="stages__list">
             <p class="stages__list-text">
-              Мы назначаем финансового управляющего, который заинтересован довести вашу процедуру банкротства до списания долга.
+              Мы назначаем финансового управляющего, который заинтересован довести вашу процедуру банкротства
+              до списания долга.
             </p>
+            <img class="stages__list-img" src="images/icons/arrow-stages.svg" alt="">
           </li>
           <li class="stages__list">
             <p class="stages__list-text">
@@ -141,7 +161,7 @@
         </ol>
       </div>
     </section>
-    
+
     <section class="answers">
       <div class="container">
         <h2 class="title answers__title">Ответы на частые вопросы</h2>
@@ -152,7 +172,8 @@
                 Что такое банкротство?
               </h5>
               <p class="answers-questions__item-text">
-                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через
+                процедуру
                 банкротства.
               </p>
             </div>
@@ -161,7 +182,8 @@
                 Как узнать подхожу ли я?
               </h5>
               <p class="answers-questions__item-text">
-                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через
+                процедуру
                 банкротства.
               </p>
             </div>
@@ -170,7 +192,8 @@
                 Какие долги списываются?
               </h5>
               <p class="answers-questions__item-text">
-                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через
+                процедуру
                 банкротства.
               </p>
             </div>
@@ -179,7 +202,8 @@
                 Сколько это длится?
               </h5>
               <p class="answers-questions__item-text">
-                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через
+                процедуру
                 банкротства.
               </p>
             </div>
@@ -188,33 +212,35 @@
                 Какие последствия процедуры?
               </h5>
               <p class="answers-questions__item-text">
-                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через процедуру
+                Банкротство это 127 Федеральный закон. С 2015 года любой гражданин имеет право списать свои долги через
+                процедуру
                 банкротства.
               </p>
             </div>
 
           </div>
+          <div class="answers-consult__wrapper">
+            <div class="answers-consult">
+              <h5 class="answers-consult__title">
+                ОСТАЛИСЬ ВОПРОСЫ?
+              </h5>
+              <p class="answers-consult__text">
+                Запишитесь на бесплатную консультацию к нашим юристам
+              </p>
+              <form class="answers-consult__form" action="#">
+                <input class="answers-consult__input" type="text" placeholder="Имя" required>
+                <input class="answers-consult__input" type="text" placeholder="Номер телефона" required>
+                <button class="answers-consult__btn" type="submit">Записаться</button>
+                <label class="answers-consult__label">
 
-          <div class="answers-consult">
-            <h5 class="answers-consult__title">
-              ОСТАЛИСЬ ВОПРОСЫ?
-            </h5>
-            <p class="answers-consult__text">
-              Запишитесь на бесплатную консультацию к нашим юристам
-            </p>
-            <form class="answers-consult__form" action="#">
-              <input class="answers-consult__input" type="text" placeholder="Имя" required>
-              <input class="answers-consult__input" type="text" placeholder="Номер телефона" required>
-              <button class="answers-consult__btn" type="submit">Записаться</button>
-              <label class="answers-consult__label">
-                
-                <div class="answers-consult__box">
-                  <input type="checkbox" class="answers-consult__inp">
-                  <span class="answers-consult__checkbox"></span>
-                </div>
-                <span class="answers-consult__checkbox-text">Даю согласие на обработку персональных данных</span>
-              </label>
-            </form>
+                  <div class="answers-consult__box">
+                    <input type="checkbox" class="answers-consult__inp">
+                    <span class="answers-consult__checkbox"></span>
+                  </div>
+                  <span class="answers-consult__checkbox-text">Даю согласие на обработку персональных данных</span>
+                </label>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -267,12 +293,12 @@
       </div>
     </section>
   </main>
-  
+
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
-        <a class="logo" href="#">
-          <img class="logo-img" src="images/logo.png" alt="logo img">
+        <a class="logo footer__logo" href="#">
+          <img class="logo-img footer__logo-img" src="images/logo.png" alt="logo img">
         </a>
         <div class="footer-info">
           <div class="footer-info__item">
@@ -294,4 +320,5 @@
 
   <script src="js/main.min.js"></script>
 </body>
+
 </html>
